tests/sumo/spec/departure/errors/speed_given50/rawdump.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Tue Feb 18 20:50:44 2020 by Eclipse SUMO Version v1_5_0+0152-425ac5aafa
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="5"/>
    </time>

    <processing>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<netstate xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netstate_file.xsd">
</netstate>
